--- a/contact.html
+++ b/contact.html
@@ -1,93 +1,163 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Jeffrey Ware Portfolio Site Contact</title>
+
+<head>
+    <title>Jeffrey Ware's Portfolio</title>
     <link rel="apple-touch-icon" href="photos/apple-icon-76x76.png" />
 <link rel="shortcut icon" href="photos/favicon.ico" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
-      <meta name=“viewport” content=“width=device-width, initial-scale=1">
+    
     <link rel="stylesheet" type="text/css" href="normalize.css">
-  	<link rel="stylesheet" type="text/css" href="styles.css">
-  	<link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
-  	<script
-  	  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  	  crossorigin="anonymous">
-      </script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
+    </script>
+    <script src="jquery.js"></script>
+</head>
 
-
-      <script src="jquery.js"></script>
-  </head>
-  <body>
-    <!-- popup menu -->
+<body>
     <div class='pop-menu'>
         <div class='menu-options'>
             <ul>
-                <li id ='aboutme'><a href='index.html'>ABOUT ME</a></li>
+                <li id ='aboutme'>ABOUT ME</li>
                 <li><a href='contact.html'>CONTACT</a></li>
-                <li><a href="https://drive.google.com/open?id=0BwJ303W2Cu58dGlvaHJnNzk1VDQ">RESUME</a></li>
+                <li>BLOG</li>
             </ul>
         </div>
-    	<div class='social-menu'>
-    	<h1 class='site-title'>MR.WARE</h1>
-    		<ul>
-    			<li>LINKEDIN</li>
-    			<li>GIT HUB</li>
-    			<li>FACEBOOK</li>
-    		</ul>
-    	</div>
-</div>
-      <div class='top-container3'>
-        <div class='top-container2'>
-            <h1 class='site-title'><a href='#aboutyou'>MR.WARE</a></h1>
-
+        <div class='social-menu'>
+            <h1 class='site-title'><a href='aboutme'>MR.WARE</a></h1>
+            <ul>
+                <li><a href='https://www.linkedin.com/in/jeffrey-ware-a62068120/'>LINKEDIN</a></li>
+                <li><a href='https://github.com/jnware7'>GIT HUB</a></li>
+                <li><a href='https://m.facebook.com/jeffrey.ware.9'>FACEBOOK</a></li>
+            </ul>
         </div>
-
-  <h1 class='more-arrow2'><strong>^</strong></h1>
-
-        <div class="p p-1"></div>
-   <div class="p p-2"></div>
-   <div class="p p-3"></div>
-   <div class="p p-4"></div>
+    </div>
+    <video class="background-video" src="photos/typing.mp4" autoplay type="video/mp4"
+	   <img src="https://social-tech-guide.s3.amazonaws.com/images/uploads/600x320/Guifi.net_1.jpg" title="Your browser does not support the <video> tag">
+	   ></video>
+    <div class='top-container'>
         <div id="menu-button">
-          <span class='outline'></span>
-          <span class='outline'></span>
-          <span class='outline'></span>
+            <span class='outline'></span>
+            <span class='outline'></span>
+            <span class='outline'></span>
         </div>
-
-      </div>
-<div class='header'>
-  <h1>Contact Me</h1>
-</div>
-
-<div class='form-div'>
-
-      <form  method="post" action="https://formspree.io/jnware7@gmail.com"name="contactform">
-    <input id="ContactForm1_contact-form-name" name="name" placeholder="Name" size="30" type="text" value="" /><br />
-    <input id="ContactForm1_contact-form-email" name="email" placeholder="Email" size="30" type="text" value="" /><br />
-    <textarea cols="25" id="ContactForm1_contact-form-email-message" name="email-message" placeholder="Message" rows="5"></textarea><br />
-    <input id="ContactForm1_contact-form-submit" type="submit" value="submit" /><br />
-    <div style="max-width: 222px; text-align: center; width: 100%;">
-    <br />
-    <br />
-    <div id="ContactForm1_contact-form-error-message">
     </div>
-    <div id="ContactForm1_contact-form-success-message">
+    <div class='top-container2'>
+        <h1 class='site-title'><a href='#aboutyou'>MR.WARE</a></h1>
+    </div>
+
+    <h1 class='more-arrow'><strong>^</strong></h1>
+
+
+
+    <div class='bio-div'>
+        <div class='photo-bio'>
+            <span class='head-bio'>
+		   <div class='image'>
+		    <img src="photos/backend_dev.jpg" class='bio-img'></img>
+		   </div>
+           <a name='aboutyou'></a>
+		   <div class='title'>
+
+			<h2 > <strong>Jeffrey Ware</strong></h2>
+			<h3><i>Software Engineer / Graphic Designer</i></h3>
+		   </div>
+	   </span>
+
+            <div class='bio-p-container'>
+
+                <p>
+                    <span id='first-letter'>W</span>ith a diverse background spanning the arts to health care, my passion for curating art has evolved to a passion for curating information architectures. With a natural eye for aesthetics, I aim to find new and innovative ways to merge design and development principles.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+<h2 class='site-title'> PROJECTS</h2>
+
+    <div class='gallery-center'>
+        <div class="photoscontainer">
+
+            <div class="photo-rowgrid">
+                <div class="cell">
+                    <a href="https://guesstheartist.herokuapp.com/scrape"><img src="photos/app_design.jpg" class="responsive-image"></img>
+                    </a>
+                    <div class='line_div'></div>
+                    <div class='project_title'>
+                        WEB SCRAPER
+                    </div>
+                    <div class='project_description'>
+                      I created a web scraper that scrapes several collections of art form  the Broad museum in LA. This app shuffles the art every time the page is reloaded. On hover the image reveales its title. Guess the artist...
+                    </div>
+                </div>
+                <div class="cell">
+                    <a href="https://github.com/yaseenagag/bookstore-2.0"><img src="photos/art.jpg" class="responsive-image"></img>
+                    </a>
+                    <div class='project_title'>
+                        REACT BOOK STORE
+                    </div>
+                    <div class='project_description'>
+                        A simple content management system that allows users to view, add, delete, and update books. Books entered in the system can be viewed in a list, as a single entry on its own page, or searched for using basic searches (by title, author, or genre).
+                    </div>
+                </div>
+                <div class="cell">
+                    <a href="https://jnware7.github.io/elated-cockatoo/"><img src="photos/backend_dev.jpg" class="responsive-image"></img>
+                    </a>
+                    <div class='project_title'>
+                        REVERSE ENGINEER IG
+                    </div>
+                    <div class='project_description'>
+                      I took a screenshots of pages on a popular social media site (Twitter, Facebook, Pinterest), and reverse engineer the HTML and CSS from scratch.
+
+
+                    </div>
+                </div>
+            <!-- </div>
+            <div class="photo-rowgrid"> -->
+                <div class="cell">
+                    <a href="https://good--music.herokuapp.com"><img src="photos/more_tech.jpg" class="responsive-image"></img>
+                    </a>
+                    <div class='project_title'>
+                       MUTABLE REST CRUD API
+                    </div>
+                    <div class='project_description'>
+                       I designed a Mutable, RESTful, CRUD API. This means that it has endpoints that you can interact with RESTfully via a front-end.
+
+
+                    </div>
+                </div>
+                <div class="cell">
+                    <a href="https://fast-brushlands-77589.herokuapp.com"><img src="photos/app_design.jpg" class="responsive-image"></img>
+                    </a>
+                    <div class='project_title'>
+                       MR. WARE BLOG
+                    </div>
+                    <div class='project_description'>
+                        I designed a Blog CMS with authentication. MR. WARE is a blog designed and maintained by Jeffrey Ware.
+                    </div>
+                </div>
+		 <div class="cell">
+                    <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
+                    </a>
+                    <div class='project_title'>
+                        NEW PROJECT 
+                    </div>
+                    <div class='project_description'>
+                       Coming Soon ...
+                    </div>
+                </div>
+                </div> 
+            </div>
+        </div>
+<blockquote><h3>“When you have exhausted all possibilities, remember this: you haven't.”</h3></blockquote> <blockquote>Thomas Edison</blockquote>
     </div>
     </div>
-    </form>
-    </div>
-      </div>
-</div>
 
-
-
-
-  <footer id='footer'>
+    <footer id='footer'>
+   <footer id='footer'>
     <div class="social_row">
       <a href =""><div class="social-1"><img src="photos/linkedin.png"></img></div></a>
       <a href =""><div class="social-2"><img src="photos/github.png"></img></div></a>
@@ -98,7 +168,3 @@
       <div class="email"> JNWARE@GMAIL.COM</div>
     </span>
   </footer>
-
-
-</body>
-</html>
