--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
         <div class='menu-options'>
             <ul>
                 <li id ='aboutme'>ABOUT ME</li>
-                <li><a href='contact.html'>CONTACT</a></li>
+                <li><a href='index.html'>CONTACT</a></li>
                 <li>BLOG</li>
             </ul>
         </div>
