--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class='pop-menu'>
         <div class='menu-options'>
             <ul>
-                <li id ='aboutme'><a href='contact.html'>ABOUT ME</a></li>
+                <li id ='aboutme'><a href='aboutme.html'>ABOUT ME</a></li>
                 <li><a href='index.html'>CONTACT</a></li>
                 <li><a href="https://drive.google.com/open?id=0BwJ303W2Cu58dGlvaHJnNzk1VDQ">RESUME</a></li>
             </ul>
