--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Jeffrey Ware Portfolio Site Contact</title>
+    <title>Jeffrey Ware </title>
     <link rel="apple-touch-icon" href="photos/apple-icon-76x76.png" />
 <link rel="shortcut icon" href="photos/favicon.ico" />
 
